<resources>
    <string name="app_name">app</string>
    <string name="favorite">Favorite</string>
    <string name="stock">Stock</string>
    <string name="search">Search</string>
    <string name="type_ticker_or_name">Type ticker or name</string>
    <string name="dollar">$</string>
    <string name="percent">%</string>
    <string name="name_header">Name:</string>
    <string name="day_change_header">Day change:</string>
    <string name="ticker_header">Ticker:</string>
    <string name="price_header">Price:</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="delete_from_favorite">delete from favorite</string>
    <string name="ticker">ticker</string>
    <string name="name">name</string>
    <string name="price">000000.00</string>
    <string name="day_change">00.00</string>
    <string name="api_not_responsible">Try again in 2 minutes. Api does not respond.</string>
</resources>