<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_fav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ticker_tv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ticker"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logo_fav"
        app:layout_constraintTop_toTopOf="@+id/logo_fav" />

    <TextView
        android:id="@+id/name_tv_fav"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo_fav"
        app:layout_constraintStart_toStartOf="@+id/ticker_tv_fav" />

    <TextView
        android:id="@+id/price_tv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ticker_tv_fav" />

    <TextView
        android:id="@+id/day_change_tv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/day_change"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/percent_tv_fav"
        app:layout_constraintTop_toTopOf="@+id/percent_tv_fav" />

    <View
        android:id="@+id/divider_fav"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/price_tv_fav"
        app:layout_constraintStart_toStartOf="@+id/logo_fav" />

    <TextView
        android:id="@+id/percent_tv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_tv_fav"
        app:layout_constraintEnd_toEndOf="@+id/price_tv_fav" />

    <TextView
        android:id="@+id/dollar_tv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/dollar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/price_tv_fav"
        app:layout_constraintTop_toTopOf="@+id/price_tv_fav" />

    <ImageView
        android:id="@+id/logo_fav"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>